--- a/test/lasertag/Makefile
+++ b/test/lasertag/Makefile
@@ -9,10 +9,10 @@
 #############################################################################
 
 # source files in this project (main.cpp is automatically assumed)
-SOURCES := ir_protocol.cpp
+SOURCES := ir_transmitter.cpp ir_receiver.cpp
 
 # header files in this project
-HEADERS := ir_protocol.hpp
+HEADERS := ir_transmitter.hpp ir_receiver.hpp
 
 # other places to look for files for this project
 SEARCH  := 
