--- a/Lasertag/lasertag/Makefile
+++ b/Lasertag/lasertag/Makefile
@@ -9,10 +9,10 @@
 #############################################################################
 
 # source files in this project (main.cpp is automatically assumed)
-SOURCES := ir_transmitter.cpp ir_receiver.cpp  ir_decoder.cpp mainGameControlTask.cpp gameTimeControl.cpp time.cpp
+SOURCES := ir_transmitter.cpp ir_receiver.cpp  ir_decoder.cpp mainGameControlTask.cpp gameTimeControl.cpp time.cpp displayTask.cpp
 
 # header files in this project
-HEADERS := ir_transmitter.hpp ir_receiver.hpp ir_decoder.hpp mainGameControlTask.hpp playerData.hpp gameTimeControl.hpp time.hpp
+HEADERS := ir_transmitter.hpp ir_receiver.hpp ir_decoder.hpp mainGameControlTask.hpp playerData.hpp gameTimeControl.hpp time.hpp displayTask.hpp
 
 # other places to look for files for this project
 SEARCH  := 
